fix(headline): nowrap for the people:

--- a/objects/_headline.scss
+++ b/objects/_headline.scss
@@ -9,6 +9,7 @@
 
 .o-headline {
   > :first-child { margin-bottom: 0; }
+  > * { white-space: nowrap; }
 }
 
 
